# eulesia

./: .env.production  .gitignore  .sops.yaml  Cargo.toml  LICENSE  README.md  capacitor.config.ts  eslint.config.js  flake.nix  index.html  justfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.claude/commands/: check.md  fix-fast.md  fix.md  frontend-style.md  impl.md  plan.md  resolve.md  review.md  rust-style.md  ship.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-test.yml  deploy.yml  import-minutes.yml
agents/skills/: check.md  deploy-verify.md  fix-fast.md  fix.md  impl.md  plan.md  resolve.md  review.md  ship.md
apps/api/: drizzle-scraper.config.ts  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  vitest.config.ts
apps/web/: capacitor.config.ts  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
crates/api/: Cargo.toml
crates/api/src/: admin.rs  announcements.rs  auth_routes.rs  bookmarks.rs  clubs.rs  devices.rs  discover.rs  ftn.rs  health.rs  institutions.rs  lib.rs  link_preview.rs  locations.rs  map.rs  notifications.rs  response_wrapper.rs  rooms.rs  search.rs  social.rs  subscriptions.rs  uploads.rs  users.rs  waitlist.rs
crates/api/src/agora/: comments.rs  edit_history.rs  mod.rs  tags.rs  threads.rs  types.rs  votes.rs
crates/api/src/messaging/: conversations.rs  delivery.rs  members.rs  messages.rs  mod.rs  types.rs
crates/api/src/moderation/: appeals.rs  mod.rs  reports.rs  sanctions.rs  types.rs
crates/api/tests/: ts_export.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  lib.rs  middleware.rs  password.rs  service.rs  session.rs  token.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  types.rs
crates/db/: Cargo.toml
crates/db/data/: fi_municipalities_2026.json
crates/db/migrations/: 0001_initial.sql
crates/db/src/: legacy_import.rs  lib.rs  seed.rs
crates/db/src/entities/: admin_accounts.rs  admin_sessions.rs  blocks.rs  bookmarks.rs  club_invitations.rs  club_members.rs  clubs.rs  comment_votes.rs  comments.rs  content_reports.rs  conversation_epochs.rs  conversations.rs  device_pairing_tokens.rs  device_signed_pre_keys.rs  devices.rs  direct_conversations.rs  domain_events.rs  edit_history.rs  follows.rs  ftn_oidc_state.rs  ftn_pending_registrations.rs  institution_claims.rs  institution_managers.rs  institution_topics.rs  invite_codes.rs  job_cursors.rs  job_runs.rs  locations.rs  magic_links.rs  media.rs  membership_events.rs  memberships.rs  message_device_queue.rs  message_redactions.rs  messages.rs  mod.rs  moderation_actions.rs  moderation_appeals.rs  municipalities.rs  mutes.rs  (+17 more)
crates/db/src/migration/: m20260403_000001_initial.rs  m20260403_000002_content_moderation_geo.rs  m20260403_000003_notifications.rs  m20260404_000004_thread_views.rs  m20260404_000005_fix_role_constraints.rs  m20260404_000006_plaintext_messaging.rs  m20260404_000007_auth_ftn_magiclink.rs  m20260405_000008_subscriptions.rs  m20260405_000009_clubs_institutions_waitlist.rs  m20260405_000010_dm_unread_count.rs  m20260405_000011_admin_features.rs  m20260406_000012_admin_accounts.rs  m20260406_000013_club_enrichment.rs  m20260406_000014_club_role_owner.rs  m20260407_000015_admin_actor_fks.rs  m20260407_000016_modlog_indexes.rs  m20260407_000017_thread_scope_club.rs  m20260407_000018_jobs_geo_foundation.rs  m20260407_000019_places_source_identity_index.rs  m20260408_000020_clean_municipality_duplicates.rs  m20260408_000021_thread_scope_personal.rs  m20260408_000022_nuke_messages.rs  m20260408_000023_add_skd_message_type.rs  m20260409_000022_municipality_designation.rs  m20260424_000024_device_pairing_tokens.rs  m20260424_000025_matrix_crypto_keys.rs  m20260424_000026_replace_skd_with_to_device_message_type.rs  m20260424_000027_drop_legacy_device_prekeys.rs  mod.rs
crates/db/src/repo/: appeals.rs  appeals_test.rs  blocks.rs  blocks_test.rs  bookmarks.rs  bookmarks_test.rs  comments.rs  comments_test.rs  conversations.rs  conversations_test.rs  device_pairing_tokens.rs  devices.rs  devices_test.rs  epochs.rs  epochs_test.rs  follows.rs  follows_test.rs  jobs.rs  memberships.rs  memberships_test.rs  messages.rs  messages_test.rs  mod.rs  moderation_actions_repo.rs  moderation_actions_test.rs  mutes.rs  mutes_test.rs  notifications.rs  notifications_test.rs  outbox.rs  outbox_helpers.rs  outbox_test.rs  pre_keys.rs  pre_keys_test.rs  push_subscriptions.rs  push_subscriptions_test.rs  reports.rs  reports_test.rs  sanctions.rs  sanctions_test.rs  (+13 more)
crates/jobs/: Cargo.toml
crates/jobs/src/: geo_places.rs  lib.rs  main.rs  outbox_worker.rs  scheduler.rs
crates/notify/: Cargo.toml
crates/notify/src/: dispatch.rs  error.rs  lib.rs  types.rs
crates/notify/src/channels/: db.rs  email.rs  fcm.rs  mod.rs  webpush.rs
crates/search/: Cargo.toml
crates/search/src/: client.rs  indexes.rs  lib.rs  sync.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  main.rs  router.rs
crates/ws/: Cargo.toml
crates/ws/src/: handler.rs  messages.rs  registry.rs
docker/: .env.example  Dockerfile.api.prod  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
docs/: CONTEXT-ministry-eu-bot.md  EIDAS_INTEGRATION.md  TODO-national-eu-content.md  admin-bootstrap-design.md  admin-surface.md  api-reference.md  api-v2-reference.md  architecture.md  ci-cd.md  database-schema.md  database-v2.md  deployment.md  development.md  eudi-wallet-integration.md  geospatial-integration.md  group-e2ee-sender-keys.md  home-system.md  matrix-rust-crypto-migration.md  rollback.md  secrets.md  v2-migration-scope.md
local/: issue-geolocation-parity.md  plan-prod-v1-v2-cutoff.md
nix/: api.nix  devshell.nix  flake-module.nix  frontend.nix  generate-idura-jwks.nix  local-dev.nix  packages.nix  server.nix
nix/ci/: checks.nix  default.nix  formatter.nix  (+1 more)
public/: robots.txt  sw-push.js
scripts/: backup-db.sh  deploy.sh  setup-server.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+539 files in other folders)
