[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/db",
  "crates/auth",
  "crates/api",
  "crates/server",
]

[workspace.dependencies]
# Shared across crates
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-chrono",
  "with-json",
  "with-uuid",
  "macros",
] }
sea-orm-migration = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Relax some pedantic lints that are too noisy
missing_errors_doc = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"
must_use_candidate = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
