[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/db",
  "crates/auth",
  "crates/api",
  "crates/jobs",
  "crates/notify",
  "crates/ws",
  "crates/search",
  "crates/server",
]

[workspace.dependencies]
# Shared across crates
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-chrono",
  "with-json",
  "with-uuid",
  "macros",
] }
sea-orm-migration = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "compression-gzip"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
time = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
jsonwebtoken = "9"
josekit = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
meilisearch-sdk = "0.28"
ts-rs = { version = "12", features = ["uuid-impl", "chrono-impl", "serde-json-impl"] }
webp = { version = "0.3" }

[workspace.lints.rust]
unsafe_code = "forbid"
private_interfaces = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Relax some pedantic lints that are too noisy
missing_errors_doc = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"
must_use_candidate = "allow"
# doc_markdown: backtick-wrapping every identifier in docs is excessive
doc_markdown = "allow"
# items_after_statements: SeaORM pattern uses `use` inside async blocks
items_after_statements = "allow"
# similar_names: variable names like `caller`/`caller_role` are fine
similar_names = "allow"
# option_if_let_else: let...else is not always clearer
option_if_let_else = "allow"
# missing_panics_doc: impractical for handler functions
missing_panics_doc = "allow"
# too_many_lines: some handlers are large by nature
too_many_lines = "allow"
# struct_excessive_bools: ThreadResponse has many boolean flags
struct_excessive_bools = "allow"
# unused_self: FCM/WebPush clients need &self for interface consistency
unused_self = "allow"
# let_and_return: sometimes clearer to name the result
let_and_return = "allow"
# match_same_arms: sometimes explicit arms are clearer than combining
match_same_arms = "allow"
# manual_let_else: if-let-else is sometimes clearer than let-else
manual_let_else = "allow"
# needless_pass_by_value: handlers take owned types for axum extraction
needless_pass_by_value = "allow"
# cast_possible_wrap: usize→i64 casts are bounded by application logic
cast_possible_wrap = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
