[package]
name = "eulesia-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
eulesia-common = { path = "../common" }
eulesia-auth = { path = "../auth" }
eulesia-db = { path = "../db" }
eulesia-search = { path = "../search" }
eulesia-ws = { path = "../ws" }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axum-test = "17"
tokio = { workspace = true }
