[package]
name = "eulesia-common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
ts = ["dep:ts-rs"]

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = "0.1"
tokio = { workspace = true }
