[package]
name = "eulesia-jobs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
eulesia-db = { path = "../db" }
sea-orm = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
