[package]
name = "eulesia-jobs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
eulesia-common = { path = "../common" }
eulesia-db = { path = "../db" }
eulesia-notify = { path = "../notify" }
eulesia-search = { path = "../search" }
anyhow = { workspace = true }
clap = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-cron-scheduler = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { workspace = true }
