[package]
name = "eulesia-notify"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
eulesia-db = { path = "../db" }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
