[package]
name = "eulesia-notify"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
eulesia-db = { path = "../db" }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
url = "2"
