[package]
name = "eulesia-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eulesia-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
axum-test = "17"
