[package]
name = "eulesia-server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "eulesia-server"
path = "src/main.rs"

[dependencies]
eulesia-api = { path = "../api" }
eulesia-common = { path = "../common" }
eulesia-db = { path = "../db" }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
