[package]
name = "eulesia-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "eulesia-server"
path = "src/main.rs"

[dependencies]
eulesia-api = { path = "../api" }
eulesia-auth = { path = "../auth" }
eulesia-common = { path = "../common" }
eulesia-db = { path = "../db" }
eulesia-jobs = { path = "../jobs" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
